--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-	"name": "preact-start-lazy",
-	"version": "1.0.0",
+	"name": "InstaPyGUI",
+	"productName": "InstaPy GUI",
+	"version": "0.0.1",
 	"description": "",
 	"main": "src/index.js",
 	"scripts": {
 		"test": "npm run lint",
-		"start": "webpack-dev-server",
-		"deploy": "webpack --config webpack.prod.config.js",
+		"start": "webpack-dev-server --config webpack.dev.config.js",
+		"build": "webpack --config webpack.prod.config.js",
+		"electron": "electron .",
+		"electron-dev": "ELECTRON_IS_DEV=1 npm run electron",
+		"electron-build": "webpack --config webpack.electron.config.js",
 		"lint": "eslint --config .eslintrc.yml --ext jsx --ext js src",
 		"lint-fix": "eslint --fix --config .eslintrc.yml --ext jsx --ext js src"
 	},
@@ -15,25 +19,28 @@
 	"dependencies": {
 		"classnames": "^2.2.6",
 		"preact": "^8.4.2",
-		"preact-async-route": "^2.2.1",
 		"preact-router": "^2.6.1",
+		"uikit": "^3.0.2",
 		"unistore": "^3.2.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.2.0",
-		"@babel/plugin-proposal-class-properties": "^7.2.1",
-		"@babel/plugin-proposal-decorators": "^7.2.3",
+		"@babel/plugin-proposal-class-properties": "^7.3.0",
+		"@babel/plugin-proposal-decorators": "^7.3.0",
 		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
-		"@babel/plugin-transform-react-jsx": "^7.2.0",
+		"@babel/plugin-transform-react-jsx": "^7.3.0",
 		"@babel/polyfill": "^7.0.0",
-		"@babel/preset-env": "^7.2.0",
+		"@babel/preset-env": "^7.3.1",
 		"babel-eslint": "^10.0.1",
 		"babel-loader": "^8.0.4",
-		"clean-webpack-plugin": "^1.0.0",
+		"clean-webpack-plugin": "^1.0.1",
 		"css-loader": "^2.0.0",
+		"electron": "^4.0.1",
+		"electron-is-dev": "^1.0.1",
 		"eslint": "^5.10.0",
 		"html-webpack-plugin": "^3.2.0",
 		"node-sass": "^4.11.0",
+		"purgecss-webpack-plugin": "^1.4.0",
 		"sass-loader": "^7.1.0",
 		"style-loader": "^0.23.1",
 		"webpack": "^4.27.1",
