basic jobs, removed some boilerplate

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
 		"test": "npm run lint",
 		"start": "webpack-dev-server --config webpack.dev.config.js",
 		"build": "webpack --config webpack.prod.config.js",
-		"electron": "electron .",
-		"electron-dev": "ELECTRON_IS_DEV=1 npm run electron",
+		"electron": "ELECTRON_IS_DEV=0 electron .",
+		"electron-dev": "ELECTRON_IS_DEV=1 electron .",
 		"electron-build": "webpack --config webpack.electron.config.js",
+		"electron-package": "ELECTRON_IS_DEV=0 electron-packager --all --ignore src .",
+		"temp": "electron-packager .",
 		"lint": "eslint --config .eslintrc.yml --ext jsx --ext js src",
 		"lint-fix": "eslint --fix --config .eslintrc.yml --ext jsx --ext js src"
 	},
@@ -37,6 +39,7 @@
 		"css-loader": "^2.0.0",
 		"electron": "^4.0.1",
 		"electron-is-dev": "^1.0.1",
+		"electron-packager": "^13.0.1",
 		"eslint": "^5.10.0",
 		"html-webpack-plugin": "^3.2.0",
 		"node-sass": "^4.11.0",
