toggle active / inactive, move jobs up and down

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"author": "Felix Breuer",
 	"license": "MIT",
 	"dependencies": {
+		"array-move": "^1.0.0",
 		"classnames": "^2.2.6",
 		"preact": "^8.4.2",
 		"preact-router": "^2.6.1",
