--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	"dependencies": {
 		"array-move": "^1.0.0",
 		"classnames": "^2.2.6",
+		"linkstate": "^1.1.1",
 		"preact": "^8.4.2",
 		"preact-router": "^2.6.1",
 		"uikit": "^3.0.2",
