switch to bootstrap, swtich to react-router, new sidebar

--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
 	"license": "MIT",
 	"dependencies": {
 		"array-move": "^1.0.0",
+		"bootstrap": "^4.2.1",
 		"classnames": "^2.2.6",
+		"jquery": "^3.3.1",
 		"linkstate": "^1.1.1",
+		"popper.js": "^1.14.7",
 		"preact": "^8.4.2",
-		"preact-router": "^2.6.1",
-		"uikit": "^3.0.2",
+		"preact-compat": "^3.18.4",
+		"react-router-dom": "^4.3.1",
 		"unistore": "^3.2.1",
 		"uuid": "^3.3.2"
 	},
@@ -36,16 +39,18 @@
 		"@babel/plugin-transform-react-jsx": "^7.3.0",
 		"@babel/polyfill": "^7.0.0",
 		"@babel/preset-env": "^7.3.1",
+		"autoprefixer": "^9.4.7",
 		"babel-eslint": "^10.0.1",
 		"babel-loader": "^8.0.4",
 		"clean-webpack-plugin": "^1.0.1",
 		"css-loader": "^2.0.0",
-		"electron": "^4.0.1",
+		"electron": "^4.0.3",
 		"electron-is-dev": "^1.0.1",
 		"electron-packager": "^13.0.1",
 		"eslint": "^5.10.0",
 		"html-webpack-plugin": "^3.2.0",
 		"node-sass": "^4.11.0",
+		"postcss-loader": "^3.0.0",
 		"purgecss-webpack-plugin": "^1.4.0",
 		"sass-loader": "^7.1.0",
 		"style-loader": "^0.23.1",
