--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"preact": "^8.4.2",
 		"preact-compat": "^3.18.4",
 		"react-router-dom": "^4.3.1",
+		"slugify": "^1.3.4",
 		"unistore": "^3.2.1",
 		"uuid": "^3.3.2"
 	},
