--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
 		"lint:fix": "eslint --fix --config .eslintrc.yml --ext jsx --ext js src"
 	},
 	"author": "Felix Breuer",
-	"license": "MIT",
+	"license": "GPL3.0",
 	"dependencies": {
 		"array-move": "^1.0.0",
 		"bootstrap": "^4.2.1",
 		"classnames": "^2.2.6",
+		"fetch-mock": "^7.3.0",
 		"jquery": "^3.3.1",
 		"linkstate": "^1.1.1",
 		"popper.js": "^1.14.7",
