--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -8,11 +8,11 @@ server {
 		index index.html;
 
 		location /api/ {
-			proxy_pass http://instapy:3000/;
+			proxy_pass http://instapy-config:3000/;
 		}
 
 		location /socket {
-			proxy_pass http://instapy:3001;
+			proxy_pass http://instapy-socket:3001;
 
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
