--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,27 @@
 version: "3"
 services:
-  instapy:
-    image: felixbreuer/instapy-services:latest
-    container_name: instapy-gui
+  webserver:
+    image: felixbreuer/instapy-webserver:latest
+    container_name: instapy-webserver
+    restart: unless-stopped
+    ports:
+      - 80:80
+    networks:
+      - instapy-net
+  instapy-config:
+    image: felixbreuer/instapy-service-config:latest
+    container_name: instapy-service-config
     restart: unless-stopped
     volumes:
       - instapy-data:/usr/instapy/assets
     networks:
       - instapy-net
-  webserver:
-    image: felixbreuer/instapy-webserver:latest
-    container_name: instapy-nginx
+  instapy-socket:
+    image: felixbreuer/instapy-service-socket:latest
+    container_name: instapy-service-socket
     restart: unless-stopped
-    ports:
-      - 222:80
+    volumes:
+      - instapy-data:/usr/instapy/assets
     networks:
       - instapy-net
 
