fix docker deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,6 @@ script:
 deploy:
   skip_cleanup: true
   provider: script
-  script:
-    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-    - docker push felixbreuer/instapy-webserver:latest
-    - docker push felixbreuer/instapy-service-config:latest
-    - docker push felixbreuer/instapy-service-socket:latest
+  script: bash scripts/deploy_docker.sh
   on:
     branch: master
