--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,11 @@ services:
     volumes:
       - instapy-data:/usr/instapy/assets
     environment:
-      - INFLUXDB_DB=${INFLUX_DB}
-      - INFLUXDB_ADMIN_USER=${INFLUXDB_USERNAME}
-      - INFLUXDB_ADMIN_PASSWORD=${INFLUXDB_PASSWORD}
+      - INFLUXDB_DB=instapy
+      - INFLUXDB_USER=instapy
+      - INFLUXDB_PASSWORD=instapysecret
+      - INFLUXDB_HOST=influxdb
+      - SOCKET_HOST=instapy-socket
     networks:
       - instapy-net
   webserver:
@@ -40,14 +42,12 @@ services:
     image: influxdb:alpine
     container_name: instapy-influxdb
     restart: unless-stopped
-    ports:
-      - 8086:8086
     volumes:
       - instapy-influxdb:/var/lib/influxdb
     environment:
-      - INFLUXDB_DB=${INFLUX_DB}
-      - INFLUXDB_ADMIN_USER=${INFLUXDB_USERNAME}
-      - INFLUXDB_ADMIN_PASSWORD=${INFLUXDB_PASSWORD}
+      - INFLUXDB_DB=instapy
+      - INFLUXDB_ADMIN_USER=instapy
+      - INFLUXDB_ADMIN_PASSWORD=instapysecret
     networks:
       - instapy-net
   chronograf:
@@ -62,8 +62,8 @@ services:
       - instapy-chronograf:/var/lib/chronograf
     environment:
       - INFLUXDB_URL=http://influxdb:8086
-      - INFLUXDB_USERNAME=${INFLUXDB_USERNAME}
-      - INFLUXDB_PASSWORD=${INFLUXDB_PASSWORD}
+      - INFLUXDB_USERNAME=instapy
+      - INFLUXDB_PASSWORD=instapysecret
     networks:
       - instapy-net
 
