--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -11,6 +11,10 @@ server {
 			proxy_pass http://instapy-config:3000/;
 		}
 
+		location /grafana/ {
+			proxy_pass http://instapy-grafana:3000/;
+		}
+
 		location /socket {
 			proxy_pass http://instapy-socket:3001;
 
