--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,25 @@ services:
       - INFLUXDB_PASSWORD=instapysecret
     networks:
       - instapy-net
+  grafana:
+    image: felixbreuer/instapy-grafana:latest
+    container_name: instapy-grafana
+    restart: unless-stopped
+    ports:
+      - 3000:3000
+    depends_on:
+      - influxdb
+    volumes:
+      - instapy-grafana:/var/lib/grafana
+    environment:
+      - INFLUXDB_URL=http://influxdb:8086
+      - INFLUXDB_USERNAME=instapy
+      - INFLUXDB_PASSWORD=instapysecret
+      - INFLUXDB_DB=instapy
+      - GF_SECURITY_ADMIN_USER=instapy
+      - GF_SECURITY_ADMIN_PASSWORD=instapysecret
+    networks:
+      - instapy-net
 
 
 networks:
@@ -76,3 +95,4 @@ volumes:
   instapy-data:
   instapy-influxdb:
   instapy-chronograf:
+  instapy-grafana:
