--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
 script:
   - npm run test
   - npm run build
-  - npm run build:docker
+  - docker-compose build
 deploy:
   skip_cleanup: true
   provider: script
