--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -8,7 +8,7 @@ server {
 		index index.html;
 
 		location /api/ {
-			proxy_pass http://instapy-config:3000/;
+			proxy_pass http://instapy-config/;
 		}
 
 		location /grafana/ {
@@ -16,7 +16,7 @@ server {
 		}
 
 		location /socket {
-			proxy_pass http://instapy-socket:3001;
+			proxy_pass http://instapy-socket;
 
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
