--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3'
 services:
   instapy:
     image: felixbreuer/instapy:latest
@@ -10,32 +10,37 @@ services:
       - INFLUXDB_USER=instapy
       - INFLUXDB_PASSWORD=instapysecret
       - INFLUXDB_HOST=influxdb
-      - SOCKET_HOST=instapy-socket
     networks:
       - instapy-net
   webserver:
     image: felixbreuer/instapy-webserver:latest
     container_name: instapy-webserver
     restart: unless-stopped
+    depends_on:
+      - config
+      - socket
+      - influxdb
+      - grafana
     ports:
       - 80:80
     networks:
       - instapy-net
-  instapy-config:
-    image: felixbreuer/instapy-service-config:latest
-    container_name: instapy-service-config
+  config:
+    image: felixbreuer/instapy-config:latest
+    container_name: instapy-config
     restart: unless-stopped
     volumes:
       - instapy-data:/usr/instapy/assets
     networks:
       - instapy-net
-  instapy-socket:
-    image: felixbreuer/instapy-service-socket:latest
-    container_name: instapy-service-socket
+  socket:
+    image: felixbreuer/instapy-socket:latest
+    container_name: instapy-socket
     restart: unless-stopped
-    volumes:
-      - instapy-data:/usr/instapy/assets
-      - /var/run/docker.sock/:/var/run/docker.sock
+    depends_on:
+      - instapy
+    environment:
+      - FILESYSTEM=windows
     networks:
       - instapy-net
   influxdb:
@@ -50,28 +55,10 @@ services:
       - INFLUXDB_ADMIN_PASSWORD=instapysecret
     networks:
       - instapy-net
-  chronograf:
-    image: chronograf:alpine
-    container_name: instapy-chronograf
-    restart: unless-stopped
-    ports:
-      - 8888:8888
-    depends_on:
-      - influxdb
-    volumes:
-      - instapy-chronograf:/var/lib/chronograf
-    environment:
-      - INFLUXDB_URL=http://influxdb:8086
-      - INFLUXDB_USERNAME=instapy
-      - INFLUXDB_PASSWORD=instapysecret
-    networks:
-      - instapy-net
   grafana:
     image: felixbreuer/instapy-grafana:latest
     container_name: instapy-grafana
     restart: unless-stopped
-    ports:
-      - 3000:3000
     depends_on:
       - influxdb
     volumes:
@@ -93,5 +80,4 @@ networks:
 volumes:
   instapy-data:
   instapy-influxdb:
-  instapy-chronograf:
   instapy-grafana:
