--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"popper.js": "^1.14.7",
 		"preact": "^8.4.2",
 		"preact-compat": "^3.18.4",
+		"preact-markup": "^1.6.0",
 		"react-router-dom": "^4.3.1",
 		"slugify": "^1.3.4",
 		"unistore": "^3.2.1",
