--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"clean-webpack-plugin": "^1.0.1",
 		"css-loader": "^2.0.0",
 		"eslint": "^5.14.1",
+		"eslint-plugin-react": "^7.12.4",
 		"html-webpack-plugin": "^3.2.0",
 		"node-sass": "^4.11.0",
 		"postcss-loader": "^3.0.0",
