remove build dependencies

--- a/services/instapy/Dockerfile
+++ b/services/instapy/Dockerfile
@@ -4,6 +4,17 @@ WORKDIR /usr/instapy
 
 COPY . .
 
-RUN sh setup.sh
+RUN apk --update --no-cache add \
+  chromium \
+  chromium-chromedriver
+
+RUN apk add --update --no-cache --virtual .build-dependencies \
+	python3-dev \
+	gcc \
+	musl-dev \
+	g++ \
+  && pip3 install -r requirements.txt \
+  && pip3 uninstall -y instapy-chromedriver \
+  && apk del .build-dependencies
 
 CMD ["sh", "start.sh"]
