--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"classnames": "^2.2.6",
 		"fetch-mock": "^7.3.0",
 		"jquery": "^3.3.1",
+		"jsonwebtoken": "^8.5.0",
 		"linkstate": "^1.1.1",
 		"popper.js": "^1.14.7",
 		"preact": "^8.4.2",
@@ -28,8 +29,7 @@
 		"preact-markup": "^1.6.0",
 		"react-router-dom": "^4.3.1",
 		"slugify": "^1.3.4",
-		"unistore": "^3.2.1",
-		"uuid": "^3.3.2"
+		"unistore": "^3.2.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.3.3",
