--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "instapy-gui",
 	"productName": "InstaPy GUI",
 	"version": "0.0.1",
-	"description": "",
+	"description": "gui for instapy bot",
 	"main": "src/index.js",
 	"scripts": {
 		"test": "npm run lint",
@@ -15,11 +15,11 @@
 	},
 	"author": "Felix Breuer",
 	"license": "GPL-3.0",
+	"repository": "github:breuerfelix/instapy-gui",
 	"dependencies": {
 		"array-move": "^1.0.0",
 		"bootstrap": "^4.3.1",
 		"classnames": "^2.2.6",
-		"fetch-mock": "^7.3.0",
 		"jquery": "^3.3.1",
 		"jsonwebtoken": "^8.5.0",
 		"linkstate": "^1.1.1",
@@ -29,22 +29,22 @@
 		"preact-markup": "^1.6.0",
 		"react-router-dom": "^4.3.1",
 		"slugify": "^1.3.4",
-		"unistore": "^3.2.1"
+		"unistore": "^3.3.2"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.3.3",
-		"@babel/plugin-proposal-class-properties": "^7.3.3",
+		"@babel/core": "^7.3.4",
+		"@babel/plugin-proposal-class-properties": "^7.3.4",
 		"@babel/plugin-proposal-decorators": "^7.3.0",
 		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
 		"@babel/plugin-transform-react-jsx": "^7.3.0",
 		"@babel/polyfill": "^7.0.0",
-		"@babel/preset-env": "^7.3.1",
-		"autoprefixer": "^9.4.7",
+		"@babel/preset-env": "^7.3.4",
+		"autoprefixer": "^9.4.10",
 		"babel-eslint": "^10.0.1",
 		"babel-loader": "^8.0.4",
 		"clean-webpack-plugin": "^1.0.1",
-		"css-loader": "^2.0.0",
-		"eslint": "^5.14.1",
+		"css-loader": "^2.1.1",
+		"eslint": "^5.15.1",
 		"eslint-plugin-react": "^7.12.4",
 		"html-webpack-plugin": "^3.2.0",
 		"node-sass": "^4.11.0",
@@ -52,9 +52,9 @@
 		"purgecss-webpack-plugin": "^1.4.0",
 		"sass-loader": "^7.1.0",
 		"style-loader": "^0.23.1",
-		"webpack": "^4.29.5",
+		"webpack": "^4.29.6",
 		"webpack-cli": "^3.2.3",
-		"webpack-dev-server": "^3.1.10",
+		"webpack-dev-server": "^3.2.1",
 		"webpack-merge": "^4.1.5"
 	}
 }
