make lint shorter

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"dev": "docker-compose -f docker-compose.yml -f docker-compose.override.yml -f docker-compose.dev.yml up -d",
 		"build:electron": "webpack --config webpack.electron.config.js",
 		"lint": "eslint --config .eslintrc.yml --ext jsx --ext js src",
-		"lint:fix": "eslint --fix --config .eslintrc.yml --ext jsx --ext js src"
+		"lint:fix": "npm run lint -- --fix"
 	},
 	"author": "Felix Breuer",
 	"license": "GPL-3.0",
