--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"test": "npm run lint",
 		"start": "webpack-dev-server --open --config webpack.dev.config.js",
 		"build": "webpack --config webpack.prod.config.js",
-		"dev": "docker-compose -f docker-compose.yml -f docker-compose.override.yml -f docker-compose.dev.yml up -d",
+		"dev": "docker-compose -f docker-compose.yml -f docker-compose.override.yml -f docker-compose.dev.yml up",
+		"dev:d": "npm run dev -- -d",
 		"dev:down": "docker-compose -f docker-compose.yml -f docker-compose.override.yml -f docker-compose.dev.yml down",
 		"build:electron": "webpack --config webpack.electron.config.js",
 		"lint": "eslint --config .eslintrc.yml --ext jsx --ext js src",
