--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
 		"test": "npm run lint",
 		"start": "webpack-dev-server --open --config webpack.dev.config.js",
 		"build": "webpack --config webpack.prod.config.js",
-		"dev": "docker-compose -f docker-compose.yml -f docker-compose.override.yml -f docker-compose.dev.yml up",
+		"docker:dev": "docker-compose -f docker-compose.yml -f docker-compose.override.yml -f docker-compose.dev.yml",
+		"dev": "npm run docker:dev -- up",
 		"dev:d": "npm run dev -- -d",
-		"dev:down": "docker-compose -f docker-compose.yml -f docker-compose.override.yml -f docker-compose.dev.yml down",
-		"build:electron": "webpack --config webpack.electron.config.js",
+		"dev:down": "npm run docker:dev -- down",
 		"lint": "eslint --config .eslintrc.yml --ext jsx --ext js src",
 		"lint:fix": "npm run lint -- --fix"
 	},
@@ -22,41 +22,42 @@
 		"array-move": "^1.0.0",
 		"bootstrap": "^4.3.1",
 		"classnames": "^2.2.6",
-		"jquery": "^3.3.1",
-		"jsonwebtoken": "^8.5.0",
+		"core-js": "^3.1.3",
+		"jquery": "^3.4.1",
+		"jsonwebtoken": "^8.5.1",
 		"linkstate": "^1.1.1",
-		"popper.js": "^1.14.7",
+		"popper.js": "^1.15.0",
 		"preact": "^8.4.2",
-		"preact-compat": "^3.18.4",
+		"preact-compat": "^3.18.5",
 		"preact-markup": "^1.6.0",
 		"react-router-dom": "^4.3.1",
 		"slugify": "^1.3.4",
-		"unistore": "^3.3.2"
+		"unistore": "^3.4.1"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.3.4",
-		"@babel/plugin-proposal-class-properties": "^7.3.4",
-		"@babel/plugin-proposal-decorators": "^7.3.0",
+		"@babel/core": "^7.4.5",
+		"@babel/plugin-proposal-class-properties": "^7.4.4",
+		"@babel/plugin-proposal-decorators": "^7.4.4",
 		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
 		"@babel/plugin-transform-react-jsx": "^7.3.0",
-		"@babel/polyfill": "^7.0.0",
-		"@babel/preset-env": "^7.3.4",
-		"autoprefixer": "^9.4.10",
+		"@babel/polyfill": "^7.4.4",
+		"@babel/preset-env": "^7.4.5",
+		"autoprefixer": "^9.6.0",
 		"babel-eslint": "^10.0.1",
-		"babel-loader": "^8.0.4",
+		"babel-loader": "^8.0.6",
 		"clean-webpack-plugin": "^1.0.1",
 		"css-loader": "^2.1.1",
-		"eslint": "^5.15.1",
-		"eslint-plugin-react": "^7.12.4",
+		"eslint": "^5.16.0",
+		"eslint-plugin-react": "^7.13.0",
 		"html-webpack-plugin": "^3.2.0",
-		"node-sass": "^4.11.0",
+		"node-sass": "^4.12.0",
 		"postcss-loader": "^3.0.0",
-		"purgecss-webpack-plugin": "^1.4.0",
+		"purgecss-webpack-plugin": "^1.5.0",
 		"sass-loader": "^7.1.0",
 		"style-loader": "^0.23.1",
-		"webpack": "^4.29.6",
-		"webpack-cli": "^3.2.3",
-		"webpack-dev-server": "^3.2.1",
+		"webpack": "^4.32.2",
+		"webpack-cli": "^3.3.2",
+		"webpack-dev-server": "^3.5.1",
 		"webpack-merge": "^4.1.5"
 	}
 }
