--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"core-js": "^3.1.3",
 		"jquery": "^3.4.1",
 		"jsonwebtoken": "^8.5.1",
+		"jwt-decode": "^2.2.0",
 		"linkstate": "^1.1.1",
 		"popper.js": "^1.15.0",
 		"preact": "^8.4.2",
