--- a/services/socket/package.json
+++ b/services/socket/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "instapy-service-socket",
+  "name": "instapy-socket",
   "version": "1.0.0",
   "description": "service which starts and stops instapy",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
