--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -14,10 +14,9 @@
     "nodemon": "^1.19.1"
   },
   "dependencies": {
-    "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.2.7"
