--- a/services/socket/package.json
+++ b/services/socket/package.json
@@ -12,6 +12,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "dockerode": "^2.5.8",
+    "jsonwebtoken": "^8.5.1",
     "ws": "^6.1.4"
   },
   "devDependencies": {
