clean repo and get ready for alpha

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -2,28 +2,35 @@ server {
 		listen 80;
 		listen [::]:80;
 
-		server_name _;
+		server_name socket.instapy.io;
 
-		root /usr/share/nginx/html;
-		index index.html;
-
-		location /api/ {
-			proxy_pass http://instapy-config/;
-		}
-
-		location /grafana/ {
-			proxy_pass http://instapy-grafana:3000/;
-		}
-
-		location /socket {
-			proxy_pass http://instapy-socket;
+		location ~ {
+			proxy_pass http://socket;
 
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection "Upgrade";
 		}
+}
 
-		location / {
-			try_files $uri $uri/ /index.html;
+server {
+		listen 80;
+		listen [::]:80;
+
+		server_name config.instapy.io;
+
+		location ~ {
+			proxy_pass http://config;
+		}
+}
+
+server {
+		listen 80;
+		listen [::]:80;
+
+		server_name auth.instapy.io;
+
+		location ~ {
+			proxy_pass http://auth;
 		}
 }
