change resolver to api

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -17,7 +17,7 @@ server {
 		listen 80;
 		listen [::]:80;
 
-		server_name config.instapy.io;
+		server_name api.instapy.io;
 
 		location ~ {
 			proxy_pass http://config;
