--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"build": "webpack --config webpack.prod.config.js",
 		"docker:build": "docker-compose build socket config auth",
 		"docker:host": "docker-compose -f docker-compose.host.yml",
+		"docker:ssl": "docker-compose -f docker-compose.ssl.yml",
 		"lint": "eslint --config .eslintrc.yml --ext jsx --ext js src",
 		"lint:fix": "npm run lint -- --fix"
 	},
