--- a/docker-compose.host.yml
+++ b/docker-compose.host.yml
@@ -15,8 +15,8 @@ services:
       - MONGO_URL
       - JWT_SECRET
       - CIPHER_SECRET
-      - VIRTUAL_HOST=api.instapy.io
-      - LETSENCRYPT_HOST=api.instapy.io
+      - VIRTUAL_HOST=config.instapy.io
+      - LETSENCRYPT_HOST=config.instapy.io
   socket:
     image: felixbreuer/instapy-socket:latest
     restart: unless-stopped
