--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.2.7"
   }
