--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"preact-markup": "^1.6.0",
 		"react-ga": "^2.5.7",
 		"react-router-dom": "^4.3.1",
+		"react-tagsinput": "^3.19.0",
 		"slugify": "^1.3.4",
 		"unistore": "^3.4.1"
 	},
