remove artifacts, setup local backend development, move domain

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ install:
 script:
   - npm run test
   - npm run build
-  - echo gui.instapy.io >> dist/CNAME
-  - docker-compose -f docker-compose.travis.yml build
+  - echo instapy.io >> dist/CNAME
+  - docker-compose build
 deploy:
   - provider: script
     skip_cleanup: true
