--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,5 @@
 version: '3'
 services:
-  instapy:
-    build: ./services/instapy
-    image: felixbreuer/instapy:latest
-    volumes:
-      - ./services/instapy:/usr/instapy
-    environment:
-      - INFLUXDB_DB=instapy
-      - INFLUXDB_USER=instapy
-      - INFLUXDB_PASSWORD=instapysecret
-      - INFLUXDB_HOST=influxdb
-    networks:
-      - instapy-net
   config:
     build: ./services/config
     image: felixbreuer/instapy-config:latest
@@ -25,8 +13,8 @@ services:
       - MONGO_URL
       - JWT_SECRET
       - CIPHER_SECRET
-    networks:
-      - instapy-net
+    depends_on:
+      - mongo
   auth:
     build: ./services/auth
     image: felixbreuer/instapy-auth:latest
@@ -39,8 +27,8 @@ services:
     environment:
       - MONGO_URL
       - JWT_SECRET
-    networks:
-      - instapy-net
+    depends_on:
+      - mongo
   socket:
     build: ./services/socket
     image: felixbreuer/instapy-socket:latest
@@ -52,46 +40,12 @@ services:
       - ./services/socket:/usr/instapy
     environment:
       - JWT_SECRET
-    networks:
-      - instapy-net
-  influxdb:
-    image: influxdb:alpine
-    restart: unless-stopped
-    volumes:
-      - instapy-influxdb:/var/lib/influxdb
-    environment:
-      - INFLUXDB_DB=instapy
-      - INFLUXDB_ADMIN_USER=instapy
-      - INFLUXDB_ADMIN_PASSWORD=instapysecret
-    networks:
-      - instapy-net
-  grafana:
-    build:
-      context: .
-      dockerfile: conf/grafana.Dockerfile
-    image: felixbreuer/instapy-grafana:latest
-    restart: unless-stopped
     depends_on:
-      - influxdb
+      - mongo
+  mongo:
+    image: mongo
+    restart: unless-stopped
     volumes:
-      - ./conf/grafana/grafana.ini:/etc/grafana/grafana.ini
-      - ./conf/grafana/datasources:/etc/grafana/provisioning/datasources
-      - ./conf/grafana/dashboards:/etc/grafana/provisioning/dashboards
+      - ./dev/mongo:/data/db
     ports:
-      - 3000:3000
-    environment:
-      - INFLUXDB_URL=http://influxdb:8086
-      - INFLUXDB_USERNAME=instapy
-      - INFLUXDB_PASSWORD=instapysecret
-      - INFLUXDB_DB=instapy
-      - GF_SECURITY_ADMIN_USER=instapy
-      - GF_SECURITY_ADMIN_PASSWORD=instapysecret
-    networks:
-      - instapy-net
-
-networks:
-  instapy-net:
-    driver: bridge
-
-volumes:
-  instapy-influxdb:
+      - 4004:27017
