--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
 		"build": "webpack --config webpack.prod.config.js",
 		"lint": "eslint --config .eslintrc.yml --ext jsx --ext js src",
 		"lint:fix": "npm run lint -- --fix",
-		"docker:build": "docker-compose build socket config auth",
-		"docker:host": "docker-compose -f docker-compose.host.yml",
-		"docker:ssl": "docker-compose -f docker-compose.ssl.yml"
+		"dc:host": "docker-compose -f docker-compose.host.yml",
+		"dc:ssl": "docker-compose -f docker-compose.ssl.yml"
 	},
 	"author": "Felix Breuer",
 	"license": "GPL-3.0",
