--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
 script:
   - npm run test
   - npm run build
-  - echo instapy.io >> dist/CNAME
+  - echo gui.instapy.io >> dist/CNAME
   - docker-compose build
 deploy:
   - provider: script
