--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.2.7"
+    "mongodb": "^3.2.7",
+    "validator": "^11.1.0"
   }
 }
