--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 	"dependencies": {
 		"array-move": "^1.0.0",
 		"classnames": "^2.2.6",
-		"core-js": "^3.1.3",
+		"core-js": "^3.1.4",
 		"history": "^4.9.0",
 		"jwt-decode": "^2.2.0",
 		"linkstate": "^1.1.1",
@@ -31,6 +31,7 @@
 		"react-ga": "^2.5.7",
 		"react-router-dom": "^4.3.1",
 		"react-tagsinput": "^3.19.0",
+		"regenerator-runtime": "^0.13.3",
 		"slugify": "^1.3.4",
 		"unistore": "^3.4.1"
 	},
@@ -40,7 +41,6 @@
 		"@babel/plugin-proposal-decorators": "^7.4.4",
 		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
 		"@babel/plugin-transform-react-jsx": "^7.3.0",
-		"@babel/polyfill": "^7.4.4",
 		"@babel/preset-env": "^7.4.5",
 		"autoprefixer": "^9.6.0",
 		"babel-eslint": "^10.0.1",
@@ -50,6 +50,7 @@
 		"dotenv-webpack": "^1.7.0",
 		"eslint": "^5.16.0",
 		"eslint-plugin-react": "^7.13.0",
+		"file-loader": "^4.1.0",
 		"html-webpack-plugin": "^3.2.0",
 		"node-sass": "^4.12.0",
 		"postcss-loader": "^3.0.0",
