fix instapy docker build errors

--- a/services/instapy/Dockerfile
+++ b/services/instapy/Dockerfile
@@ -9,7 +9,8 @@ RUN apk add --update --no-cache --virtual .build-dependencies \
 	gcc \
 	musl-dev \
 	g++ \
-	libffi \
+	libffi-dev \
+	libressl-dev \
   && pip3 install -r requirements.txt \
   && pip3 uninstall -y instapy-chromedriver \
   && apk del .build-dependencies
