fixed client Dockerfile to work with Firefox and Geckodriver

--- a/services/instapy/Dockerfile
+++ b/services/instapy/Dockerfile
@@ -1,23 +1,33 @@
-FROM python:3-alpine
+FROM python:3.7-slim-buster
 
 WORKDIR /usr/instapy
 
 COPY . .
 
-RUN apk add --update --no-cache --virtual .build-dependencies \
-	python3-dev \
-	gcc \
-	musl-dev \
-	g++ \
-	libffi-dev \
-	libressl-dev \
-  && pip3 install -r requirements.txt \
-  && pip3 uninstall -y instapy-chromedriver \
-  && apk del .build-dependencies
 
-RUN apk --update --no-cache add \
-  chromium \
-  chromium-chromedriver
+RUN apt-get update && apt-get install -y \
+    wget gcc g++ \
+    fonts-liberation libappindicator3-1 libasound2 libatk-bridge2.0-0 \
+    libnspr4 libnss3 lsb-release xdg-utils libxss1 libdbus-glib-1-2 \
+    curl unzip \
+    xvfb
 
-ENV CHROMEDRIVER_PATH=/usr/bin/chromedriver
+
+# install geckodriver and firefox
+
+RUN GECKODRIVER_VERSION=`curl https://github.com/mozilla/geckodriver/releases/latest | grep -Po 'v[0-9]+.[0-9]+.[0-9]+'` && \
+    wget https://github.com/mozilla/geckodriver/releases/download/$GECKODRIVER_VERSION/geckodriver-$GECKODRIVER_VERSION-linux64.tar.gz && \
+    tar -zxf geckodriver-$GECKODRIVER_VERSION-linux64.tar.gz -C /usr/local/bin && \
+    chmod +x /usr/local/bin/geckodriver && \
+    rm geckodriver-$GECKODRIVER_VERSION-linux64.tar.gz
+
+RUN FIREFOX_SETUP=firefox-setup.tar.bz2 && \
+    apt-get purge firefox && \
+    wget -O $FIREFOX_SETUP "https://download.mozilla.org/?product=firefox-latest&os=linux64" && \
+    tar xjf $FIREFOX_SETUP -C /opt/ && \
+    ln -s /opt/firefox/firefox /usr/bin/firefox && \
+    rm $FIREFOX_SETUP
+	
+RUN pip3 install -r requirements.txt;
+
 CMD ["python3", "-u", "start.py"]
