Freezed apt and pip and removed unnecessary packages
IMG Size from 900 to 700

--- a/services/instapy/requirements.txt
+++ b/services/instapy/requirements.txt
@@ -1,4 +1,4 @@
-instapy
-websocket-client
-requests
-python-dotenv
+instapy==0.6.4
+websocket-client==0.56.0
+requests==2.22.0
+python-dotenv==0.10.3
