--- a/services/instapy/Dockerfile
+++ b/services/instapy/Dockerfile
@@ -4,30 +4,15 @@ WORKDIR /usr/instapy
 
 COPY . .
 
-
-RUN apt-get update && apt-get install -y \
-    wget gcc g++ \
-    fonts-liberation libappindicator3-1 libasound2 libatk-bridge2.0-0 \
-    libnspr4 libnss3 lsb-release xdg-utils libxss1 libdbus-glib-1-2 \
-    curl unzip \
-    xvfb
-
-
-# install geckodriver and firefox
-
-RUN GECKODRIVER_VERSION=`curl https://github.com/mozilla/geckodriver/releases/latest | grep -Po 'v[0-9]+.[0-9]+.[0-9]+'` && \
-    wget https://github.com/mozilla/geckodriver/releases/download/$GECKODRIVER_VERSION/geckodriver-$GECKODRIVER_VERSION-linux64.tar.gz && \
-    tar -zxf geckodriver-$GECKODRIVER_VERSION-linux64.tar.gz -C /usr/local/bin && \
-    chmod +x /usr/local/bin/geckodriver && \
-    rm geckodriver-$GECKODRIVER_VERSION-linux64.tar.gz
-
-RUN FIREFOX_SETUP=firefox-setup.tar.bz2 && \
-    apt-get purge firefox && \
-    wget -O $FIREFOX_SETUP "https://download.mozilla.org/?product=firefox-latest&os=linux64" && \
-    tar xjf $FIREFOX_SETUP -C /opt/ && \
-    ln -s /opt/firefox/firefox /usr/bin/firefox && \
-    rm $FIREFOX_SETUP
+RUN sed -i "s#deb http://deb.debian.org/debian buster main#deb http://deb.debian.org/debian buster main contrib non-free#g" /etc/apt/sources.list \
+	&& apt-get update && apt-get install -y --no-install-recommends \
+    wget=1.20.1-1.1 gcc=4:8.3.0-1 g++=4:8.3.0-1 \
+	firefox-esr=60.8.0esr-1~deb10u1 firefoxdriver\
+ 	&& apt-get clean \
+ 	&& rm -rf /var/lib/apt/lists/*
 	
 RUN pip3 install -r requirements.txt;
 
 CMD ["python3", "-u", "start.py"]
+
+
