--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,3 @@
-#github: # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
 open_collective: instapy
+patreon: scriptworld
 ko_fi: Y8Y6KZHJ
-#tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
-#custom: # Replace with a single custom sponsorship URL
