--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
 		"@babel/plugin-transform-react-jsx": "^7.3.0",
 		"@babel/preset-env": "^7.4.5",
+		"@types/core-js": "^2.5.3",
 		"autoprefixer": "^9.6.0",
 		"babel-eslint": "^10.0.1",
 		"babel-loader": "^8.0.6",
