Use adsense on top level domain to allow usage on docs.instapy.io
Signed-off-by: Felix Breuer <f.breuer94@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ script:
   - npm run test
   - npm run build
   - echo instapy.io >> dist/CNAME
+  - touch dist/.nojekyll
   - docker-compose build
 deploy:
   - provider: script
