--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
 	"name": "instapy-gui",
 	"productName": "InstaPy GUI",
-	"version": "0.0.1",
+	"version": "1.0.0",
 	"description": "GUI for InstaPy automation",
 	"main": "src/index.js",
 	"scripts": {
 		"test": "npm run lint",
 		"start": "webpack-dev-server --open --config webpack.dev.config.js",
 		"start:local": "ENV_FILE=.env npm run start",
-		"build": "webpack --config webpack.prod.config.js",
+		"build": "webpack --config webpack.prod.config.js && cp public/*.png dist",
 		"lint": "eslint --config .eslintrc.yml --ext jsx --ext js src",
 		"black": "black -S services",
 		"lint:fix": "npm run lint -- --fix",
