--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,9 +46,20 @@ services:
     image: mongo
     restart: unless-stopped
     volumes:
-      - ./dev/mongo:/data/db
+      - /home/user/dev/mongo:/data/db
     ports:
       - 27017:27017
   instapy:
     build: ./services/instapy
     image: felixbreuer/instapy-client:latest
+  
+  actions:
+    build: ./services/actions
+    image: python:3.8
+    command: sh -c "pip3 install wheel && pip3 install -r /usr/instapy/requirements.txt && python3 -u /usr/instapy/main.py"
+    volumes:
+      - ./services/actions:/usr/instapy
+    environment:
+      - MONGO_URL
+    depends_on:
+      - mongo
